begin impl document content download
